--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -4,7 +4,7 @@
     background-color: #1A1A1A;
     .about-me-text {
         color: white;
-        font-size: 24px;
+        font-size: 22px;
         max-width: 400px;
         @media (max-width: 1020px) {
             font-size: 20px;
@@ -47,6 +47,7 @@
             border-radius: 100%;
             margin-bottom: 50px;
             margin-right: 20px;
+            background-color: #fa2759;
             @media (max-width: 755px) {
                 margin-bottom: 0;
             }
@@ -88,18 +89,20 @@
         display: flex;
         justify-content: space-around;
         align-items: center;
-        padding-bottom: 100px;
+        padding-bottom: 30px;
         @media (max-width: 755px) {
             display: flex;
             flex-wrap: wrap;
-            padding-left: 10px;
+            // padding-left: 10px;
+        }
+        @media (max-width: 755px) {
+            display: flex;
+            flex-wrap: wrap;
+            //  padding-left: 10px;
         }
     }
     .journey {
-        height: 215px;
-        @media (max-width: 758px) {
-            padding-bottom: 100px;
-        }
+        height: 310px;
         color: white;
         img {
             position: relative;
