--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -17,11 +17,7 @@
         display: flex;
         justify-content: space-around;
         align-items: center;
-        cursor: pointer;
-        padding-right: 300px;
-        @media (max-width: 1200px) {
-            padding-right: 200px;
-        }
+        padding-right: 100px;
         @media (max-width: 975px) {
             padding-right: 0px;
             display: flex;
@@ -29,16 +25,18 @@
             align-items: center;
             padding-top: 40px;
         }
+        @media (max-width: 480px) {
+            padding-top: 0;
+            display: flex;
+            justify-content: space-evenly;
+        }
     }
     .router-links {
         display: flex;
         flex-direction: column;
         margin-top: 40px;
         font-weight: 500;
-        padding-left: 300px;
-        @media (max-width: 1250px) {
-            padding-left: 200px;
-        }
+        padding-left: 100px;
         @media (max-width: 975px) {
             display: flex;
             flex-direction: column;
@@ -60,6 +58,9 @@
             @media (max-width: 900px) {
                 font-size: 18px;
             }
+            @media (max-width: 480px) {
+                font-size: 16px;
+            }
         }
         p {
             font-size: 20px;
@@ -71,6 +72,11 @@
     img {
         width: 60px;
         padding-left: 50px;
+        cursor: pointer;
+        @media (max-width: 480px) {
+            width: 50px;
+            padding-left: 0;
+        }
         @media (max-width: 400px) {
             width: 55px;
         }
