--- a/src/app/header-text/header-text.component.scss
+++ b/src/app/header-text/header-text.component.scss
@@ -1,23 +1,24 @@
 .header-text-img {
     display: flex;
     justify-content: space-between;
-    padding-top: 250px;
+    //  padding-top: 250px;
     @media (max-width: 900px) {
         display: flex;
         flex-direction: column-reverse;
         align-items: center;
-        padding-top: 170px;
+        //   padding-top: 70px;
     }
     @media (max-width: 480px) {
         display: flex;
     }
     img {
-        width: 400px;
-        height: 400px;
+        width: 330px;
+        height: 330px;
         object-fit: cover;
         margin-top: 30px;
         border-radius: 100%;
         margin-left: 20px;
+        background-color: #fa2759;
         @media (max-width: 1200px) {
             width: 300px;
             height: 300px;
@@ -32,7 +33,7 @@
     }
     p {
         color: white;
-        font-size: 70px;
+        font-size: 60px;
         font-weight: 800;
         @media (max-width: 1200px) {
             font-size: 50px;
@@ -78,7 +79,7 @@
         font-size: 24px;
         color: #2DFCD8;
         cursor: pointer;
-        @media (max-width: 480px) {
+        @media (max-width: 1200px) {
             font-size: 20px;
         }
     }
