--- a/src/app/menu-links/menu-links.component.scss
+++ b/src/app/menu-links/menu-links.component.scss
@@ -1,8 +1,8 @@
 header {
-    left: 0;
-    right: 0;
+    //  left: 0;
+    // right: 0;
     height: 80px;
-    position: absolute;
+    // position: absolute;
     background-color: black;
     display: flex;
     align-items: center;
@@ -22,6 +22,10 @@ header {
         @media (max-width: 900px) {
             margin-top: 35px;
         }
+        @media (max-width: 480px) {
+            padding-left: 5px;
+            height: 55px;
+        }
     }
     a {
         cursor: pointer;
@@ -32,6 +36,9 @@ header {
         padding: 10px;
         &:hover {
             color: #FA2759;
+        }
+        @media (max-width: 1200px) {
+            font-size: 18px;
         }
     }
     .linksActiv {
