--- a/src/app/my-skills/my-skills.component.scss
+++ b/src/app/my-skills/my-skills.component.scss
@@ -1,17 +1,17 @@
 .my-skills {
     background-color: #1A1A1A;
-    width: 100vw;
-    max-width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    // width: 100vw;
+    // max-width: 100%;
     h1 {
         color: white;
-        font-size: 64px;
+        font-size: 50px;
         display: flex;
         justify-content: center;
         align-items: center;
-        padding-top: 50px;
-        @media (max-width: 930px) {
-            font-size: 55px;
-        }
+        //  padding-top: 50px;
         @media (max-width: 575px) {
             font-size: 48px;
         }
@@ -24,21 +24,25 @@
         align-items: center;
         justify-content: space-between;
         flex-wrap: wrap;
+        max-width: 620px;
         @media (max-width: 1250px) {
             display: flex;
             justify-content: space-evenly;
-            padding-right: 50px;
-            padding-left: 50px;
+            //  padding-right: 50px;
+            // padding-left: 50px;
         }
         @media (max-width: 435px) {
             padding-left: 0;
             padding-right: 0;
         }
         img {
-            height: 40px;
+            height: 30px;
             position: relative;
             top: 20px;
             left: 20px;
+            @media (max-width: 1250px) {
+                left: 17px;
+            }
             @media (max-width: 930px) {
                 height: 30px;
                 top: 15px;
@@ -54,25 +58,23 @@
             display: flex;
             justify-content: space-evenly;
             align-items: center;
-            margin-bottom: 30px;
-            padding: 30px;
+            //  margin-bottom: 30px;
+            padding: 10px;
             @media (max-width: 930px) {
                 padding: 10px;
             }
         }
         p {
-            width: 250px;
-            height: 170px;
+            //  width: 250px;
+            // height: 170px;
+            width: 180px;
+            height: 120px;
             border-radius: 10px;
             background-color: white;
-            font-size: 24px;
+            font-size: 22px;
             display: flex;
             justify-content: center;
             align-items: center;
-            @media (max-width: 930px) {
-                width: 200px;
-                height: 150px;
-            }
             @media (max-width: 750px) {
                 width: 140px;
                 height: 100px;
@@ -81,22 +83,16 @@
         }
         .icons {
             background-color: white;
-            width: 80px;
-            height: 80px;
+            width: 60px;
+            height: 60px;
             border-radius: 100%;
             border: solid 2px whitesmoke;
             box-shadow: -2px 0px 6px 0px rgb(0, 0, 0, 0.2);
             position: relative;
-            top: 70px;
-            left: 85px;
+            top: 60px;
+            left: 60px;
             justify-content: center;
             align-items: center;
-            @media (max-width: 1250px) {
-                width: 70px;
-                height: 70px;
-                top: 60px;
-                left: 90px;
-            }
             @media (max-width: 930px) {
                 width: 60px;
                 height: 60px;
