--- a/src/app/my-work/my-work.component.html
+++ b/src/app/my-work/my-work.component.html
@@ -7,7 +7,7 @@
         <button mat-stroked-button color="primary" [style.background-color]="t!=3 ? 'black' : '#FA2759'" #javascript (click)="setSearchParam('javascript', '3')" class="btn-left-right">Java Script</button>
     </div>
 
-    <div class="projects padding-allProjects">
+    <div class="projects">
         <div class="projects-container" data-aos="fade-in" data-aos-offset="100" *ngFor="let picture, let project of getallProjectPictures() let i = index" (mouseover)="isChangedBlock[i] = true" (mouseout)="isChangedBlock[i] = false">
             <div class="projects-hover">
                 <img src="assets/img/{{ picture['path'] }}">
@@ -20,7 +20,8 @@
                     </div>
 
                     <div class="project-btn">
-                        <button mat-stroked-button color="primary" (click)="openNewTab(i)" [hidden]="!isChangedBlock[i]">Try</button>
+                        <button mat-stroked-button color="primary" (click)="openNewTab(i)" [hidden]="!isChangedBlock[i]">Try out</button>
+                        <button mat-stroked-button color="primary" (click)="openGitLink(i)" class="git">Git</button>
                     </div>
                 </div>
             </div>
