--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,6 +1,6 @@
-<div id="contact" class="contact">
+<div id="contact" class="contact" data-aos="fade-right" data-aos-easing="ease-out-cubis">
     <h1>Contact me</h1>
-    <p>Get in touch via the from bellow, or by emailling <a href="tijana.couturier@web.de">tijana.couturier@web.de</a>.</p>
+    <p>Get in touch via the from bellow, or by emailing <a href="tijana.couturier@web.de">tijana.couturier@web.de</a>.</p>
 
     <form (submit)="sendMail()" ngNativeValidate #myForm class="form">
 
