--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -95,8 +95,11 @@
             width: 85%;
         }
         button {
-            background-color: #2DFCD8;
-            color: black;
+            // background-color: #2DFCD8;
+            // color: black;
+            background-color: black;
+            color: white;
+            border: 2px solid #2DFCD8;
             font-size: 18px;
             margin-top: 40px;
             margin-bottom: 55px;
@@ -105,6 +108,7 @@
             padding: 10px 55px;
             &:hover {
                 background-color: #2DFCD8;
+                color: black;
             }
             @media (max-width: 575px) {
                 padding: 5px 35px;
