--- a/src/app/my-skills/my-skills.component.scss
+++ b/src/app/my-skills/my-skills.component.scss
@@ -3,15 +3,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    // width: 100vw;
-    // max-width: 100%;
     h1 {
         color: white;
         font-size: 50px;
         display: flex;
         justify-content: center;
         align-items: center;
-        //  padding-top: 50px;
         @media (max-width: 575px) {
             font-size: 48px;
         }
@@ -25,11 +22,10 @@
         justify-content: space-between;
         flex-wrap: wrap;
         max-width: 620px;
+        padding-bottom: 20px;
         @media (max-width: 1250px) {
             display: flex;
             justify-content: space-evenly;
-            //  padding-right: 50px;
-            // padding-left: 50px;
         }
         @media (max-width: 435px) {
             padding-left: 0;
@@ -58,15 +54,12 @@
             display: flex;
             justify-content: space-evenly;
             align-items: center;
-            //  margin-bottom: 30px;
             padding: 10px;
             @media (max-width: 930px) {
                 padding: 10px;
             }
         }
         p {
-            //  width: 250px;
-            // height: 170px;
             width: 180px;
             height: 120px;
             border-radius: 10px;
