--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -3,7 +3,7 @@
     <div class="about-me-header padding-allProjects">
         <div class="about-div">
             <div>
-                <img src="assets/img/profil.png" data-aos="fade-zoom-in" data-aos-easing="ease-in-back">
+                <img src="assets/img/portrait.png" data-aos="fade-zoom-in" data-aos-easing="ease-in-back">
             </div>
             <div class="about-me-text">
                 <h1 data-aos="fade-right" data-aos-easing="ease-out-cubis">About me.</h1>
