--- a/src/app/header-text/header-text.component.html
+++ b/src/app/header-text/header-text.component.html
@@ -8,7 +8,7 @@
     </div>
 
     <div class="myImg">
-        <img src="assets/img/profil.png">
+        <img src="assets/img/portfolio-img.png">
     </div>
 </div>
 
