--- a/src/app/header-text/header-text.component.scss
+++ b/src/app/header-text/header-text.component.scss
@@ -12,11 +12,16 @@
     img {
         width: 330px;
         height: 330px;
-        object-fit: cover;
+        object-fit: contain;
         margin-top: 30px;
         border-radius: 100%;
         margin-left: 20px;
-        background-color: #fa2759;
+        // background-color: #fa2759;
+        background-color: #b8a7a7;
+        background-color: #bbaaaa;
+        background-color: #afaaaa;
+        background-color: #b3a9a9;
+        background-color: #b9aeac;
         @media (max-width: 1200px) {
             width: 300px;
             height: 300px;
